# cal-magic

./: .gitignore  README.md  pyproject.toml
cal_magic/: main.py
cal_magic/db/: embeddings.py
cal_magic/goog/: calendar.py
cal_magic/openapi/: openapi.py
